@@ -1,43 +1,29 @@
 package cc.endmc.server.controller.permission;
 
 import cc.endmc.common.annotation.AddOrUpdateFilter;
-import cc.endmc.common.annotation.Excel;
 import cc.endmc.common.annotation.Log;
 import cc.endmc.common.core.controller.BaseController;
 import cc.endmc.common.core.domain.AjaxResult;
 import cc.endmc.common.core.page.TableDataInfo;
 import cc.endmc.common.core.redis.RedisCache;
 import cc.endmc.common.enums.BusinessType;
-import cc.endmc.common.utils.DateUtils;
 import cc.endmc.common.utils.StringUtils;
 import cc.endmc.common.utils.poi.ExcelUtil;
 import cc.endmc.framework.manager.AsyncManager;
-import cc.endmc.server.annotation.SignVerify;
 import cc.endmc.server.common.EmailTemplates;
 import cc.endmc.server.common.constant.CacheKey;
 import cc.endmc.server.common.service.EmailService;
-import cc.endmc.server.config.QuestionConfig;
-import cc.endmc.server.domain.bot.QqBotConfig;
+import cc.endmc.server.domain.permission.WhitelistIdChangeHistory;
 import cc.endmc.server.domain.permission.WhitelistInfo;
 import cc.endmc.server.domain.player.PlayerDetails;
-import cc.endmc.server.domain.quiz.WhitelistQuizConfig;
-import cc.endmc.server.domain.quiz.WhitelistQuizSubmission;
+import cc.endmc.server.dto.WhitelistImportTemplate;
 import cc.endmc.server.enums.Identity;
-import cc.endmc.server.service.bot.IQqBotConfigService;
-import cc.endmc.server.service.other.IIpLimitInfoService;
+import cc.endmc.server.service.permission.IWhitelistIdChangeHistoryService;
 import cc.endmc.server.service.permission.IWhitelistInfoService;
 import cc.endmc.server.service.player.IPlayerDetailsService;
-import cc.endmc.server.service.quiz.IWhitelistQuizConfigService;
-import cc.endmc.server.service.quiz.IWhitelistQuizSubmissionService;
-import cc.endmc.server.utils.*;
-import cn.hutool.core.util.RandomUtil;
-import com.alibaba.fastjson2.JSONObject;
-import com.fasterxml.jackson.annotation.JsonInclude;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import jakarta.annotation.PostConstruct;
-import jakarta.servlet.http.HttpServletRequest;
+import cc.endmc.server.utils.MinecraftUUIDUtil;
+import cc.endmc.server.utils.SecureCodeUtil;
 import jakarta.servlet.http.HttpServletResponse;
-import lombok.Data;
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import org.springframework.beans.factory.annotation.Value;
@@ -51,9 +37,8 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.text.SimpleDateFormat;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
-import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.regex.Pattern;
 
@@ -68,451 +53,16 @@ import java.util.regex.Pattern;
 @RequiredArgsConstructor
 public class WhitelistInfoController extends BaseController {
 
-    private final IWhitelistInfoService whitelistInfoService;
-    private final AsyncManager asyncManager = AsyncManager.me();
-    private final IIpLimitInfoService iIpLimitInfoService;
-    private final IWhitelistQuizConfigService quizConfigService;
-    private final IWhitelistQuizSubmissionService quizSubmissionService;
-    private final IPlayerDetailsService playerDetailsService;
-    private final IQqBotConfigService qqBotConfigService;
-    private final EmailService emailService;
     private final RedisCache redisCache;
-    private SimpleDateFormat dateFormat;
+    private final AsyncManager asyncManager = AsyncManager.me();
+
+    private final EmailService emailService;
+    private final IWhitelistInfoService whitelistInfoService;
+    private final IPlayerDetailsService playerDetailsService;
+    private final IWhitelistIdChangeHistoryService whitelistIdChangeHistoryService;
+
     @Value("${app-url}")
     private String appUrl;
-    @Value("${whitelist.iplimit}")
-    private String iplimit;
-    @Value("${whitelist.email}")
-    private String ADMIN_EMAIL;
-    @Value("${app.ip-header-name:X-Real-IP}")
-    private String ipHeaderName;
-
-    @PostConstruct
-    public void init() {
-        dateFormat = new SimpleDateFormat("yyyy-MM-dd HH:mm");
-        dateFormat.setTimeZone(TimeZone.getTimeZone("Asia/Shanghai"));
-    }
-
-    @SignVerify // 开启签名验证
-    @SneakyThrows
-    @PostMapping("/apply")
-    public AjaxResult apply(HttpServletRequest request, @RequestBody WhitelistInfo whitelistInfo, @RequestHeader Map<String, String> header) {
-        if (whitelistInfo == null || whitelistInfo.getUserName() == null || whitelistInfo.getQqNum() == null) {
-            return error("申请信息不能为空!");
-        }
-
-        logger.info("申请信息:{}", whitelistInfo);
-        logger.info("header:{}", header);
-
-        // 获取IP地址
-        //String ip = WhitelistUtils.getIpFromHeader(header);
-        String ip = IPUtils.getClientIpAddress(request, ipHeaderName);
-
-        // 获取UA头
-        if (!header.containsKey("user-agent")) {
-            return error("请勿使用爬虫提交申请!");
-        }
-        String userAgent = header.get("user-agent");
-        String[] blackList = {"okhttp", "Postman", "curl", "python", "Go-http-client", "Java", "HttpClient", "Apache-HttpClient", "httpunit", "webclient", "webharvest", "wget", "libwww", "htmlunit", "pangolin"};
-        for (String s : blackList) {
-            if (userAgent.contains(s)) {
-                return error("请勿使用爬虫提交申请!");
-            }
-        }
-        // 判断是否为正确浏览器
-        if (!userAgent.contains("Mozilla") && !userAgent.contains("Chrome") && !userAgent.contains("Safari") && !userAgent.contains("Edge") && !userAgent.contains("Opera") && !userAgent.contains("Firefox")) {
-            return error("请使用浏览器提交申请!");
-        }
-
-        // 游戏ID正则匹配
-        Pattern p = Pattern.compile("[a-zA-Z0-9_]{1,35}");
-        if (!p.matcher(whitelistInfo.getUserName()).matches()) {
-            return error("游戏ID不合法!");
-        }
-
-        // QQ号正则匹配
-        Pattern p2 = Pattern.compile("[0-9]{5,11}");
-        if (!p2.matcher(whitelistInfo.getQqNum()).matches()) {
-            return error("QQ号不合法!");
-        }
-
-        if (!whitelistInfoService.checkRepeat(whitelistInfo).isEmpty()) {
-            List<WhitelistInfo> whitelistInfos = whitelistInfoService.checkRepeat(whitelistInfo);
-            WhitelistInfo obj = whitelistInfos.getFirst();
-            return switch (obj.getAddState()) {
-                case "1" ->
-                        success("用户:[" + obj.getUserName() + "]的提交已于 [" + dateFormat.format(obj.getAddTime()) + "] 日通过审核,审核人:[" + obj.getReviewUsers() + "]");
-                case "2" ->
-                        success("用户:[" + obj.getUserName() + "]的审核已于 [" + dateFormat.format(obj.getAddTime()) + "] 日被移除白名单,请规范游戏!如有疑问联系管理员");
-                default -> success("正在审核,请勿重复提交申请~ 如有纰漏或加急请联系管理员!");
-            };
-        }
-
-        // IP限流检查
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.setSerializationInclusion(JsonInclude.Include.NON_NULL);
-        String bodyParams = mapper.writeValueAsString(whitelistInfo);
-        AjaxResult limitResult = WhitelistUtils.checkIpLimit(ip, iIpLimitInfoService, iplimit,
-                whitelistInfo.getUserName(), userAgent, bodyParams);
-        if (limitResult != null) {
-            return limitResult;
-        }
-
-        final String code = CodeUtil.generateCode(whitelistInfo.getQqNum(), CacheKey.VERIFY_KEY);
-
-        if (StringUtils.isEmpty(code)) {
-            return error("验证码生成失败,请稍后再试!");
-        } else if (code != null && code.equals("isExist")) {
-            return error("请勿重复申请！");
-        }
-
-        // 新增玩家详情
-        PlayerDetails details = new PlayerDetails();
-        details.setUserName(whitelistInfo.getUserName());
-        details.setQq(whitelistInfo.getQqNum());
-        details.setCreateBy("AUTO::apply::" + whitelistInfo.getUserName());
-        details.setCreateTime(new Date());
-        details.setIdentity(Identity.PLAYER.getValue());
-        details.setGameTime(0L);
-
-        // 获取地理位置
-        if (StringUtils.isNotEmpty(ip)) {
-            String[] location = WhitelistUtils.getIpLocation(ip);
-            if (location[0] != null) {
-                details.setProvince(location[0]);
-            }
-            if (location[1] != null) {
-                details.setCity(location[1]);
-            }
-        }
-
-        // 缓存对象,30分钟
-        Map<String, Object> data = new HashMap<>();
-        data.put("whitelistInfo", whitelistInfo);
-        data.put("details", details);
-        redisCache.setCacheObject(CacheKey.VERIFY_KEY + code, data, 30, TimeUnit.MINUTES);
-
-        // 获取前端地址，如果有路径就去掉
-        if (header.containsKey("origon")) {
-            appUrl = header.get("origon");
-        } else if (header.containsKey("referer")) {
-            appUrl = header.get("referer");
-        }
-
-        // 修改验证链接生成逻辑
-        if (appUrl.endsWith("/")) {
-            appUrl = appUrl.substring(0, appUrl.length() - 1);
-        }
-        // 改为前端验证页面的地址
-        String url = appUrl + "/#/verify?code=" + code;
-
-        // 发送邮件通知
-        emailService.push(whitelistInfo.getQqNum() + EmailTemplates.QQ_EMAIL,
-                EmailTemplates.EMAIL_VERIFY_TITLE, EmailTemplates.getEmailVerifyTemplate(url));
-
-        return success("验证邮件已发送,请查收! 如果未收到邮件,请检查垃圾箱或联系管理员!");
-    }
-
-    /**
-     * 验证白名单
-     * 此接口不受权限控制!
-     *
-     * @param request 请求
-     * @param code    验证码
-     * @param header  请求头
-     * @return 结果
-     */
-    @SignVerify
-    @GetMapping("/verify")
-    public AjaxResult verify(HttpServletRequest request, @RequestParam String code, @RequestHeader Map<String, String> header) {
-        if (StringUtils.isEmpty(code)) {
-            return error("验证失败,请勿直接访问此链接!");
-        }
-
-        // 检查验证码是否存在（区分来源）
-        String webKey = CacheKey.VERIFY_KEY + code;
-        String botKey = CacheKey.VERIFY_FOR_BOT_KEY + code;
-        String batchKey = CacheKey.VERIFY_FOR_BATCH_KEY + code;
-        String cacheKey = null;
-        final boolean isFromBot;
-        final boolean isFromBatch;
-
-        if (redisCache.hasKey(webKey)) {
-            cacheKey = webKey;
-            isFromBot = false;
-            isFromBatch = false;
-        } else if (redisCache.hasKey(botKey)) {
-            cacheKey = botKey;
-            isFromBot = true;
-            isFromBatch = false;
-        } else if (redisCache.hasKey(batchKey)) {
-            cacheKey = batchKey;
-            isFromBot = false;
-            isFromBatch = true;
-        } else {
-            return error("验证失败,验证码无效!");
-        }
-
-        // 获取缓存数据
-        Object cacheData = redisCache.getCacheObject(cacheKey);
-        if (cacheData == null) {
-            return error("验证失败,数据为空!");
-        }
-
-        WhitelistInfo whitelistInfo;
-        PlayerDetails details = null;
-
-        try {
-            // 根据来源处理不同的数据结构
-            if (!isFromBot && !isFromBatch) {
-                // Web端申请的数据处理
-                Map<String, Object> data = (Map<String, Object>) cacheData;
-                JSONObject whitelistInfoJson = (JSONObject) data.get("whitelistInfo");
-                whitelistInfo = whitelistInfoJson.toJavaObject(WhitelistInfo.class);
-
-                JSONObject detailsJson = (JSONObject) data.get("details");
-                details = detailsJson.toJavaObject(PlayerDetails.class);
-            } else {
-                // QQ机器人+批量 申请的数据处理
-                whitelistInfo = (WhitelistInfo) cacheData;
-
-                // 为QQ机器人申请创建PlayerDetails
-                details = new PlayerDetails();
-                details.setUserName(whitelistInfo.getUserName());
-                details.setQq(whitelistInfo.getQqNum());
-                details.setCreateTime(new Date());
-                details.setIdentity(Identity.PLAYER.getValue());
-                details.setGameTime(0L);
-                details.setCreateBy(isFromBatch ?
-                        "BATCH::apply::" + whitelistInfo.getUserName() :
-                        "BOT::apply::" + whitelistInfo.getUserName()
-                );
-            }
-
-            // 获取IP地址
-            //String ip = WhitelistUtils.getIpFromHeader(header);
-            String ip = IPUtils.getClientIpAddress(request, ipHeaderName);
-
-            // IP限流检查
-            if (StringUtils.isNotEmpty(ip)) {
-                AjaxResult limitResult = WhitelistUtils.checkIpLimit(ip, iIpLimitInfoService, iplimit,
-                        whitelistInfo.getUserName(), header.get("user-agent"), null);
-                if (limitResult != null) {
-                    return limitResult;
-                }
-            }
-
-            // 如果IP存在且details不为空，获取地理位置
-            if (StringUtils.isNotEmpty(ip) && details != null) {
-                String[] location = WhitelistUtils.getIpLocation(ip);
-                if (location[0] != null) {
-                    details.setProvince(location[0]);
-                }
-                if (location[1] != null) {
-                    details.setCity(location[1]);
-                }
-            }
-
-        } catch (Exception e) {
-            logger.error("数据转换失败", e);
-            return error("验证失败,数据格式错误!");
-        }
-
-        // 保存玩家详情
-        if (details != null) {
-            playerDetailsService.insertPlayerDetails(details);
-        }
-
-        // 补全基础申请信息 - 使用MinecraftUUIDUtil生成UUID
-        boolean isOnline = whitelistInfo.getOnlineFlag() == 1;
-        String uuid = MinecraftUUIDUtil.getPlayerUUID(whitelistInfo.getUserName(), isOnline);
-        whitelistInfo.setUserUuid(uuid);
-
-        String source;
-        // 设置创建信息
-        if (isFromBot) {
-            source = "机器人";
-            whitelistInfo.setCreateBy("BOT::apply::" + whitelistInfo.getUserName());
-        } else if (isFromBatch) {
-            source = "批量";
-            whitelistInfo.setCreateBy("BATCH::apply::" + whitelistInfo.getUserName());
-        } else {
-            source = "网页";
-            whitelistInfo.setCreateBy("WEB::apply::" + whitelistInfo.getUserName());
-        }
-
-        whitelistInfo.setCreateTime(new Date());
-        whitelistInfo.setAddTime(new Date());
-        whitelistInfo.setTime(new Date());
-        whitelistInfo.setAddState("0"); // 添加状态：0-未添加，1-已添加
-        whitelistInfo.setStatus("0"); // 审核状态 0-未审核，1-审核通过，2-审核不通过
-
-        // 检查是否启用了自动通过功能，并检查答题情况
-        boolean autoApproved = false;
-
-        // 首先检查答题功能是否开启
-        WhitelistQuizConfig quizStatusConfig = new WhitelistQuizConfig();
-        quizStatusConfig.setConfigKey(QuestionConfig.STATUS);
-        List<WhitelistQuizConfig> statusConfigs = quizConfigService.selectWhitelistQuizConfigList(quizStatusConfig);
-
-        // 只有在答题功能开启的情况下才检查自动通过和答题记录
-        if (!statusConfigs.isEmpty() && "true".equalsIgnoreCase(statusConfigs.getFirst().getConfigValue())) {
-            WhitelistQuizConfig autoPassedConfig = new WhitelistQuizConfig();
-            autoPassedConfig.setConfigKey(QuestionConfig.AUTO_PASSED);
-            List<WhitelistQuizConfig> autoPassedConfigs = quizConfigService.selectWhitelistQuizConfigList(autoPassedConfig);
-
-            if (!autoPassedConfigs.isEmpty() && "true".equalsIgnoreCase(autoPassedConfigs.getFirst().getConfigValue())) {
-                // 自动通过功能已启用，检查此玩家的答题记录
-                WhitelistQuizSubmission submission = new WhitelistQuizSubmission();
-                submission.setPlayerName(whitelistInfo.getUserName());
-                List<WhitelistQuizSubmission> submissions = quizSubmissionService.selectWhitelistQuizSubmissionList(submission);
-
-                if (submissions != null && !submissions.isEmpty()) {
-                    // 找到最新的一次提交
-                    WhitelistQuizSubmission latestSubmission = submissions.getFirst();
-                    for (WhitelistQuizSubmission sub : submissions) {
-                        if (sub.getSubmitTime() != null &&
-                                (latestSubmission.getSubmitTime() == null ||
-                                        sub.getSubmitTime().after(latestSubmission.getSubmitTime()))) {
-                            latestSubmission = sub;
-                        }
-                    }
-
-                    // 检查是否通过分数线
-                    if (latestSubmission.getPassStatus() != null && latestSubmission.getPassStatus() == 1) {
-                        // 已通过分数线，自动审核通过
-                        whitelistInfo.setStatus("1"); // 审核状态改为通过
-                        whitelistInfo.setReviewUsers("System(Auto)");
-                        whitelistInfo.setUpdateTime(new Date());
-                        autoApproved = true;
-                        logger.info("用户[{}]的白名单申请已自动通过审核，答题分数：{}",
-                                whitelistInfo.getUserName(), latestSubmission.getTotalScore());
-                    }
-                }
-            }
-        } else {
-            logger.info("答题功能未开启，跳过自动审批检查");
-        }
-
-        // 保存最终的自动审核状态
-        final boolean finalAutoApproved = autoApproved;
-
-        if (whitelistInfoService.insertWhitelistInfo(whitelistInfo) != 0) {
-            // 删除验证码
-            redisCache.deleteObject(cacheKey);
-
-            // 发送邮件通知申请人
-            TimerTask timerTask = new TimerTask() {
-                @Override
-                public void run() {
-                    try {
-                        if (finalAutoApproved) {
-                            // 使用已有的模板，替换内容表明自动通过
-                            String emailContent = EmailTemplates.getWhitelistNotificationPending(
-                                    whitelistInfo.getQqNum(),
-                                    whitelistInfo.getUserName(),
-                                    DateUtils.getTime(),
-                                    true, // 表示已通过
-                                    "default" // 使用默认模板
-                            ).replace("正在审核中", "已自动审核通过");
-
-                            emailService.push(whitelistInfo.getQqNum() + EmailTemplates.QQ_EMAIL,
-                                    EmailTemplates.TITLE,
-                                    emailContent);
-                        } else {
-                            emailService.push(whitelistInfo.getQqNum() + EmailTemplates.QQ_EMAIL,
-                                    EmailTemplates.TITLE,
-                                    EmailTemplates.getWhitelistNotificationPending(
-                                            whitelistInfo.getQqNum(),
-                                            whitelistInfo.getUserName(),
-                                            DateUtils.getTime(),
-                                            false,
-                                            "default"
-                                    ));
-                        }
-                    } catch (ExecutionException | InterruptedException e) {
-                        throw new RuntimeException(e);
-                    }
-                }
-            };
-            asyncManager.execute(timerTask);
-
-            String passConnect = "用户 [" + whitelistInfo.getUserName() + "] 通过" + source +
-                    "提交了白名单申请,并已被系统自动审核通过!";
-
-            String reviewConnect = "用户 [" + whitelistInfo.getUserName() + "] 通过" + source +
-                    "提交了白名单申请,请尽快审核!";
-
-
-            // 通知管理员
-            TimerTask timerTask2 = new TimerTask() {
-                @Override
-                public void run() {
-                    try {
-                        if (finalAutoApproved) {
-                            final String reviewTemplate = EmailTemplates.getReviewTemplate(whitelistInfo.getQqNum(), whitelistInfo.getUserName(), DateUtils.getTime(), true);
-                            emailService.push(ADMIN_EMAIL, EmailTemplates.TITLE,
-                                    reviewTemplate != null ? reviewTemplate : passConnect);
-                        } else {
-                            final String reviewTemplate = EmailTemplates.getReviewTemplate(whitelistInfo.getQqNum(), whitelistInfo.getUserName(), DateUtils.getTime(), false);
-                            emailService.push(ADMIN_EMAIL, EmailTemplates.TITLE,
-                                    reviewTemplate != null ? reviewTemplate : reviewConnect);
-                        }
-                    } catch (ExecutionException | InterruptedException e) {
-                        throw new RuntimeException(e);
-                    }
-                }
-            };
-            asyncManager.execute(timerTask2);
-
-            // QQ群通知
-            final QqBotConfig qqBotConfig = new QqBotConfig();
-            qqBotConfig.setStatus(1L);
-            List<QqBotConfig> qqBotConfigs = qqBotConfigService.selectQqBotConfigList(qqBotConfig);
-            if (qqBotConfigs != null && !qqBotConfigs.isEmpty()) {
-                for (QqBotConfig botConfig : qqBotConfigs) {
-                    if (botConfig.getStatus() == 1L) {
-                        String connect = "【白名单申请】🎉 用户【" + whitelistInfo.getUserName() + "】通过 " + source + " 提交了白名单申请，快来审核吧！📝\n" +
-                                "申请人QQ: " + whitelistInfo.getQqNum() + "\n";
-
-                        if (details != null && StringUtils.isNotEmpty(details.getProvince())) {
-                            connect += "📍省份: " + details.getProvince() + "\n";
-                        }
-
-                        if (details != null && StringUtils.isNotEmpty(details.getCity())) {
-                            connect += "🏙️城市: " + details.getCity() + "\n";
-                        }
-
-                        if (!finalAutoApproved) {
-                            String key;
-                            while (true) {
-                                key = RandomUtil.randomNumbers(4);
-                                if (redisCache.hasKey(CacheKey.PASS_KEY + key)) {
-                                    // 确保key唯一
-                                    logger.warn("生成的唯一key已存在，重新生成: {}", key);
-                                } else {
-                                    redisCache.setCacheObject(CacheKey.PASS_KEY + key, whitelistInfo, 30, TimeUnit.MINUTES);
-                                    break;
-                                }
-                            }
-                            connect += "管理员回复 【通过 " + key + "】 可通过白名单审核 ✅\n";
-                            connect += "请在 30 分钟内回复此消息以完成审核。⏳\n";
-                        } else {
-                            connect += "🌟 已自动审核通过！🎉\n";
-                        }
-
-                        // 发送消息
-                        BotUtil.sendMessage(connect, botConfig.getGroupIds(), botConfig);
-                    }
-
-                }
-            }
-
-            return success(finalAutoApproved ? "恭喜您！您的白名单申请已自动审核通过！" : EmailTemplates.APPLY_SUCCESS);
-        } else {
-            return error(EmailTemplates.APPLY_ERROR);
-        }
-    }
 
     /**
      * 批量申请白名单
@@ -522,13 +72,28 @@ public class WhitelistInfoController extends BaseController {
      */
     @SneakyThrows
     private boolean batchApply(WhitelistInfo whitelistInfo) {
-        final String code = CodeUtil.generateCode(whitelistInfo.getQqNum(), CacheKey.VERIFY_FOR_BATCH_KEY);
-        if (StringUtils.isEmpty(code)) {
-            return false;
-        } else if (code != null && code.equals("isExist")) {
+        // 检查是否有活跃的验证码
+        if (SecureCodeUtil.hasActiveCode(whitelistInfo.getQqNum(), CacheKey.VERIFY_FOR_BATCH_KEY)) {
             return false;
         }
+
+        // 生成安全的验证码（8位字母数字组合）
+        final String code = SecureCodeUtil.generateSecureCode(
+                whitelistInfo.getQqNum(),
+                CacheKey.VERIFY_FOR_BATCH_KEY,
+                8,
+                30
+        );
+
+        if (StringUtils.isEmpty(code)) {
+            return false;
+        }
+
+        // 缓存白名单信息
         redisCache.setCacheObject(CacheKey.VERIFY_FOR_BATCH_KEY + code, whitelistInfo, 30, TimeUnit.MINUTES);
+
+        // 标记活跃验证码
+        SecureCodeUtil.markActiveCode(whitelistInfo.getQqNum(), CacheKey.VERIFY_FOR_BATCH_KEY, 30);
 
         String url = appUrl + "/#/verify?code=" + code;
 
@@ -646,15 +211,27 @@ public class WhitelistInfoController extends BaseController {
         return toAjax(whitelistInfoService.deleteWhitelistInfoByIds(ids));
     }
 
-    @GetMapping("check")
-    @CrossOrigin(origins = "https://app.yousb.sbs", maxAge = 3600)
-    public AjaxResult cheack(@RequestParam Map<String, String> params) {
+    /**
+     * 查询ID更改历史列表（管理员）
+     */
+    @PreAuthorize("@ss.hasPermi('mc:whitelist:changeHistory')")
+    @GetMapping("/changeHistory/list")
+    public TableDataInfo listChangeHistory(WhitelistIdChangeHistory history) {
+        startPage();
+        List<WhitelistIdChangeHistory> list = whitelistIdChangeHistoryService.selectWhitelistIdChangeHistoryList(history);
+        return getDataTable(list);
+    }
 
-        if (params.isEmpty()) {
-            return error("查询信息不能为空!");
-        }
-
-        return success(whitelistInfoService.check(params));
+    /**
+     * 导出ID更改历史列表
+     */
+    @PreAuthorize("@ss.hasPermi('mc:whitelist:changeHistory')")
+    @Log(title = "白名单ID更改历史", businessType = BusinessType.EXPORT)
+    @PostMapping("/changeHistory/export")
+    public void exportChangeHistory(HttpServletResponse response, WhitelistIdChangeHistory history) {
+        List<WhitelistIdChangeHistory> list = whitelistIdChangeHistoryService.selectWhitelistIdChangeHistoryList(history);
+        ExcelUtil<WhitelistIdChangeHistory> util = new ExcelUtil<>(WhitelistIdChangeHistory.class);
+        util.exportExcel(response, list, "白名单ID更改历史");
     }
 
     /**
@@ -762,7 +339,7 @@ public class WhitelistInfoController extends BaseController {
             // 设置响应头
             response.setContentType("application/vnd.openxmlformats-officedocument.spreadsheetml.sheet");
             response.setHeader("Content-Disposition", "attachment;filename=" +
-                    java.net.URLEncoder.encode(fileName, "UTF-8"));
+                    java.net.URLEncoder.encode(fileName, StandardCharsets.UTF_8));
 
             // 将文件写入响应流
             try (InputStream inputStream = resource.getInputStream();
@@ -783,23 +360,5 @@ public class WhitelistInfoController extends BaseController {
                 logger.error("写入错误响应失败", ex);
             }
         }
-    }
-
-    /**
-     * Excel导入模板对象
-     */
-    @Data
-    public static class WhitelistImportTemplate {
-        @Excel(name = "QQ号")
-        private String qqNum;
-
-        @Excel(name = "游戏昵称")
-        private String userName;
-
-        @Excel(name = "是否正版")
-        private String isOnline;
-
-        @Excel(name = "备注")
-        private String remark;
     }
 }
